- a new hook added to plugin: `showCalendar` executed before showing picker widget - `classes` added to options: allows to set a class for picker widget - `hooks` added to options: allows assignment of hooks at startup

--- a/src/css/datetimepicker.css
+++ b/src/css/datetimepicker.css
@@ -42,6 +42,7 @@
 .datetimepicker-weekdays .datetimepicker-flexcell,
 .datetimepicker-weekdays .datetimepicker-cell{
 	cursor: inherit;
+	border: 1px solid transparent;
 }
 
 .datetimepicker-cell{
