1. resolved a compatibility issue with [IE < edge] and EC6:rest (...) definition in callHook function 2. added displayWeeks and weeks selection 3. template is now saved into a separate file. 4. css is now updated to comply with weeks selection feature 5. updated README to reflect on the changes

--- a/src/css/datetimepicker.css
+++ b/src/css/datetimepicker.css
@@ -1,7 +1,6 @@
 .datetimepicker-placeholder {
 	position: absolute;
 	box-sizing: border-box;
-	width:      18.5em;
 	display:    none;
 }
 
@@ -54,6 +53,7 @@
 
 .datetimepicker-list{
 	margin: 0.1em 0;
+	width:      18em;
 }
 
 .datetimepicker-prev,
@@ -140,4 +140,13 @@ body{
 	content: "";
 	clear: both;
 	display: table;
+}
+
+.datetimepicker-list-weeks{
+	width:2.5em;
+	display: inline-block;
+	border-right: 1px solid #999999;
+}
+.datetimepicker-days-holder{
+	display: inline-block;
 }
