1. resolved issues with setting `options.template` on runtime 2. added better day/week action-handling

--- a/src/css/datetimepicker.css
+++ b/src/css/datetimepicker.css
@@ -38,6 +38,12 @@
 	vertical-align: top;
 }
 
+
+.datetimepicker-flexcell.not-selectable,
+.datetimepicker-cell.not-selectable {
+	cursor: inherit;
+}
+
 .datetimepicker-weekdays .datetimepicker-flexcell,
 .datetimepicker-weekdays .datetimepicker-cell{
 	cursor: inherit;
